# advent-of-code-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  new_day.sh
2025/: .env.example  Cargo.toml  benchmarks.txt  justfile
2025/day-01/: Cargo.toml
2025/day-01/benches/: benchmarks.rs
2025/day-01/src/: main.rs  solver.rs
2025/day-02/: Cargo.toml
2025/day-02/benches/: benchmarks.rs
2025/day-02/src/: main.rs  solver.rs
2025/day-03/: Cargo.toml
2025/day-03/benches/: benchmarks.rs
2025/day-03/src/: main.rs  solver.rs
2025/day-04/: Cargo.toml
2025/day-04/benches/: benchmarks.rs
2025/day-04/src/: main.rs  solver.rs
2025/day-05/: Cargo.toml
2025/day-05/benches/: benchmarks.rs
2025/day-05/src/: main.rs  solver.rs
2025/day-06/: Cargo.toml
2025/day-06/benches/: benchmarks.rs
2025/day-06/src/: main.rs  solver.rs
2025/day-07/: Cargo.toml
2025/day-07/benches/: benchmarks.rs
2025/day-07/src/: main.rs  solver.rs
2025/day-08/: Cargo.toml
2025/day-08/benches/: benchmarks.rs
2025/day-08/src/: main.rs  solver.rs
2025/day-09/: Cargo.toml
2025/day-09/benches/: benchmarks.rs
2025/day-09/src/: main.rs  solver.rs
2025/day-10/: Cargo.toml
2025/day-10/benches/: benchmarks.rs
2025/day-10/src/: main.rs  solver.rs
2025/day-template/: Cargo.toml
2025/day-template/benches/: benchmarks.rs
2025/day-template/src/: main.rs  solver.rs
2025/day1/: Cargo.toml
2025/day1/benches/: benchmarks.rs
2025/day1/src/: main.rs  solver.rs
2025/day2/: Cargo.toml
2025/day2/benches/: benchmarks.rs
2025/scripts/: get-aoc-input.rs
src/: lib.rs  main.rs
(+38 files in other folders)
