[package]
name = "day2"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day2-bench"
path = "benches/benchmarks.rs"
harness = false
